--- a/source/index.html
+++ b/source/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Objectively Boilerplate
+title: Results for America 2018
 description:
 seo_image_path: #'/images/media/filename.jpg'
 ---
