--- a/source/index.html
+++ b/source/index.html
@@ -4,25 +4,63 @@ title: Results for America 2018
 description:
 seo_image_path: #'/images/media/filename.jpg'
 ---
+{% assign index = site.data.contentful.indexPage.indexPage %}
+{% assign criteria = site.data.contentful.criteria.criteria %}
 
-<main role="main" id="index"> <!-- main content starts here -->
+{% for page in index %}
+  {% if page.year == '2018' %}
+    <main role="main" id="index">
+      <section class="top-section">
+        <div class="row align-center">
+          <div class="column large-8 medium-8 small-12">
+            <h1>{{ page.year }}</h1>
+            <hr>
+            <h2>Invest in What Works State Standard of Excellence</h2>
+          </div>
+        </div>
+        <div class="row align-center">
+          <div class="column large-10">
+            {{ page.short_description | markdownify }}
+          </div>
+        </div>
+      </section>
 
-<section class="top-section top-section--purple">
-  <div class="row">
-    <div class="medium-12 column">
-      <h1>{{page.title}}</h1>
-      <p class="top-section__tagline">{{page.subtitle}}</p>
-    </div>
-  </div>
-</section>
+      <section class="table">
+        <div class="row expanded">
+          <table>
+            <tr>
+              <th>Criteria</th>
+              <th>Leading Efforts</th>
+              <th>Promising Efforts</th>
+            </tr>
+            {% for item in criteria %}
+              <tr>
+                <td class="title">{{ item.title }}</td>
+                <td class="leading">
+                  <div class="state">
+                    {{item.leading_list.state_abbreviation}}
+                  </div>
+                  <div class="description">
+                    {{item.leading_list.short_description | markdownify}}
+                  </div>
+                  <div class="link">
+                    <a href="#">Learn More</a>
+                  </div>
+                </td>
+                <td class="promising">
+                  {% for state in item.promising_list %}
+                    <div class="promising-state">
+                      {{state.state_abbreviation}}
+                    </div>
+                  {% endfor %}
+                </td>
+              </tr>
+            {% endfor %}
+          </table>
+        </div>
+      </section>
 
-<section class="page-section">
-  <div class="row">
-    <div class="column large-12">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed necessitatibus, error eaque vero aperiam numquam, tenetur, soluta quibusdam odio eius aut. Distinctio placeat repellendus, repellat neque itaque in esse nobis!</p>
-    </div>
-  </div>
-</section>
 
-
-</main>
+    </main>
+  {% endif %}
+{% endfor %}
