--- a/source/index.html
+++ b/source/index.html
@@ -32,7 +32,6 @@ seo_image_path: #'/images/media/filename.jpg'
             <th style="width:38%">Leading Efforts</th>
             <th style="width:38%">Promising Efforts</th>
           </tr>
-
             {% for item in criteria %}
               <tr class="criteria">
                 <td class="title">{{ item.title }}</td>
@@ -45,9 +44,8 @@ seo_image_path: #'/images/media/filename.jpg'
                       {{item.leading_list.short_description}}
                     </div>
                   </div>
-
                   <div class="link row align-right">
-                    <div class="column large-4">
+                    <div class="column large-5">
                       <a class="learn-more" href="#">Learn More</a>
                     </div>
                   </div>
@@ -64,12 +62,22 @@ seo_image_path: #'/images/media/filename.jpg'
                 </td>
               </tr>
             {% endfor %}
-
-
         </table>
       </div>
     </section>
 
+    <section class="page-section">
+      <div class="row">
+        <div class="column">
+          {{ page.long_description | markdownify }}
+        </div>
+      </div>
+      <div class="row align-center">
+        <div class="button-container column large-4 small-12">
+          <a href="#" class="button download-button">Download<i class="material-icons arrow">arrow_forward</i></a>
+        </div>
+      </div>
+    </section>
 
   </main>
 {% endfor %}
