--- a/source/leading-efforts.html
+++ b/source/leading-efforts.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Leading Efforts 
+title: Leading Efforts
 description:
 permalink: /state-standard-of-excellence/leading-efforts
 seo_image_path: #'/images/media/filename.jpg'
@@ -21,6 +21,9 @@ seo_image_path: #'/images/media/filename.jpg'
         <hr>
         <h2>{{page.title}}</h2>
       </div>
+    </div>
+    <div class="button-container button-container--align-left row">
+     <a class="button button--index" href="{{'/' | relative_url}}"><span>Back to<br>the Index</span></a>
     </div>
   </section>
 
