Edit criteria page
Add description and explanation

Open markdown rendered links in new windows

Add tests

Edit index button

--- a/source/leading-efforts.html
+++ b/source/leading-efforts.html
@@ -27,10 +27,19 @@ seo_image_path: #'/images/media/filename.jpg'
     </div>
   </section>
 
+  <section class="section section__description">
+    <div class="row align-center">
+      <div class="column large-10">
+        {{ page.description | markdownify }}
+      </div>
+    </div>
+  </section>
+
+
   <section class="section section__explanation">
     <div class="row align-center">
       <div class="column large-10">
-        {{ pageContent.description | markdownify }}
+        {{ page.explanation | markdownify }}
       </div>
     </div>
   </section>
