Add prev/next criteria controls

--- a/source/leading-examples.html
+++ b/source/leading-examples.html
@@ -56,9 +56,5 @@ seo_image_path: #'/images/media/filename.jpg'
     {%endfor%}
 
   </section>
-
-
-
-
-
+  {% include mobile-index.html %}
 </main>
