--- a/source/index.html
+++ b/source/index.html
@@ -24,17 +24,17 @@ seo_image_path: #'/images/media/filename.jpg'
       </div>
       <div class="button-container">
         <div class="row align-center buttons">
-          <div class="column large-5 medium-6 small-12">
+          <div class="column large-5 medium-7 small-12">
             <a href="#" class="button download-button">Download the State Standard<i class="material-icons arrow">arrow_forward</i></a>
           </div>
         </div>
         <div class="row align-center buttons">
-          <div class="column large-5 medium-6 small-12">
+          <div class="column large-5 medium-7 small-12">
             <a href="#" class="button download-button">Download Summary Version<i class="material-icons arrow">arrow_forward</i></a>
           </div>
         </div>
         <div class="row align-center buttons">
-          <div class="column large-5 medium-6 small-12">
+          <div class="column large-5 medium-7 small-12">
             <a href="#" class="button download-button">Download Appendix<i class="material-icons arrow">arrow_forward</i></a>
           </div>
         </div>
@@ -165,6 +165,12 @@ seo_image_path: #'/images/media/filename.jpg'
               </tr>
             {% endfor %}
         </table>
+
+      </div>
+      <div class="row align-center expanded footnote">
+        <div class="column large-8 small-12">
+          <p><strong>1.</strong> The views expressed herein are those of Results for America and do not necessarily reflect the views of the Pew Charitable Trusts or the John D. and Catherine T. MacArthur Foundation.</p>
+        </div>
       </div>
       <div class="button-container">
         <div class="row align-center buttons">
