Use criteria descriptions

--- a/source/leading-examples.html
+++ b/source/leading-examples.html
@@ -27,7 +27,7 @@ seo_image_path: #'/images/media/filename.jpg'
     </div>
   </section>
 
-  <section class="section section__description">
+  <section class="section section__description section__description--leading">
     <div class="row align-center">
       <div class="column large-10">
         {{ pageContent.description | markdownify }}
