Add markdown classes to all markdown fields to open links in new window

--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@ seo_image_path: #'/images/media/filename.jpg'
         </div>
       </div>
       <div class="row align-center">
-        <div class="column large-11">
+        <div class="column large-11 markdown">
           {{ page.short_description | markdownify }}
         </div>
       </div>
