--- a/source/index.html
+++ b/source/index.html
@@ -25,17 +25,17 @@ seo_image_path: #'/images/media/filename.jpg'
       <div class="button-container">
         <div class="row align-center buttons">
           <div class="column large-5 medium-7 small-12">
-            <a href="{{'/2018_Invest_In_What_Works_State_Standard_of_Excellence.pdf' | relative_url}}" target="_blank" class="button download-button">Download the State Standard<i class="material-icons arrow">arrow_forward</i></a>
+            <a href="{{page.download_url}}" target="_blank" class="button download-button">Download the State Standard<i class="material-icons arrow">arrow_forward</i></a>
           </div>
         </div>
         <div class="row align-center buttons">
           <div class="column large-5 medium-7 small-12">
-            <a href="#" class="button download-button">Download Summary Version<i class="material-icons arrow">arrow_forward</i></a>
+            <a href="{{page.download_summary}}" target="_blank" class="button download-button">Download Summary Version<i class="material-icons arrow">arrow_forward</i></a>
           </div>
         </div>
         <div class="row align-center buttons">
           <div class="column large-5 medium-7 small-12">
-            <a href="#" class="button download-button">Download Appendix<i class="material-icons arrow">arrow_forward</i></a>
+            <a href="{{page.download_appendix}}" target="_blank" class="button download-button">Download Appendix<i class="material-icons arrow">arrow_forward</i></a>
           </div>
         </div>
       </div>
@@ -176,17 +176,17 @@ seo_image_path: #'/images/media/filename.jpg'
       <div class="button-container">
         <div class="row align-center buttons">
           <div class="column large-5 medium-6 small-12">
-            <a href="#" class="button download-button">Download the State Standard<i class="material-icons arrow">arrow_forward</i></a>
+            <a href="{{page.download_url}}" target="_blank" class="button download-button">Download the State Standard<i class="material-icons arrow">arrow_forward</i></a>
           </div>
         </div>
         <div class="row align-center buttons">
           <div class="column large-5 medium-6 small-12">
-            <a href="#" class="button download-button">Download Summary Version<i class="material-icons arrow">arrow_forward</i></a>
+            <a href="{{page.download_summary}}" target="_blank" class="button download-button">Download Summary Version<i class="material-icons arrow">arrow_forward</i></a>
           </div>
         </div>
         <div class="row align-center buttons">
           <div class="column large-5 medium-6 small-12">
-            <a href="#" class="button download-button">Download Appendix<i class="material-icons arrow">arrow_forward</i></a>
+            <a href="{{page.download_appendix}}" target="_blank" class="button download-button">Download Appendix<i class="material-icons arrow">arrow_forward</i></a>
           </div>
         </div>
       </div>
